# laboratorioDiProgrammazione

./: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h  main.cpp
test/: AccountFixture.cpp  AccountTest.cpp  CMakeLists.txt  TransactionFixture.cpp  runAllTest.cpp
